// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioGroup /> <RadioGroup.Radio /> Snapshots should match snapshot with default radio 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessible={true}
  checked={false}
  disabled={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  pressed={false}
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderColor": "#9898A6",
        "borderRadius": 9999,
        "borderStyle": "solid",
        "borderWidth": 2,
        "height": 20,
        "justifyContent": "center",
        "width": 20,
      },
    ]
  }
/>
`;

exports[`<RadioGroup /> <RadioGroup.Radio /> Snapshots should match snapshot with default radio 2`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessible={true}
  checked={false}
  disabled={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  pressed={false}
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderColor": "#9898A6",
        "borderRadius": 9999,
        "borderStyle": "solid",
        "borderWidth": 2,
        "height": 20,
        "justifyContent": "center",
        "width": 20,
      },
    ]
  }
/>
`;

exports[`<RadioGroup /> <RadioGroup.Radio /> Snapshots should match snapshot with default radio pressed 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessible={true}
  checked={false}
  disabled={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  pressed={false}
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderColor": "#9898A6",
        "borderRadius": 9999,
        "borderStyle": "solid",
        "borderWidth": 2,
        "height": 20,
        "justifyContent": "center",
        "width": 20,
      },
    ]
  }
  testID="radio"
/>
`;

exports[`<RadioGroup /> <RadioGroup.Radio /> Snapshots should match snapshot with disabled radio 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessible={true}
  checked={false}
  disabled={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  pressed={false}
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderColor": "#8F8F8F",
        "borderRadius": 9999,
        "borderStyle": "solid",
        "borderWidth": 2,
        "height": 20,
        "justifyContent": "center",
        "width": 20,
      },
    ]
  }
/>
`;
